cabal-version:      2.4
name:               day1
version:            0.1.0.0

license:            NONE
author:             Lukas Meuser

executable day1
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, split

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
